<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:support="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item
        android:id="@+id/activate_settings"
        android:title="@string/setting_activate"
        app:showAsAction="never" />
    <item
        android:id="@+id/configure_settings"
        android:title="@string/setting_configure"
        app:showAsAction="never" />
    <item
        android:id="@+id/phone_settings"
        android:title="@string/setting_phone"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/help_settings"
        android:title="@string/setting_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_settings"
        android:title="@string/setting_about"
        app:showAsAction="never" />
    <!--
    <item
        android:id="@+id/share_settings"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:title="@string/share_settings"
        support:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="always" />
        -->
</menu>
