<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context="com.surfacesoft.yaj.satransferui.HelpTransfer">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/color_blue"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/title_activity_about"
        android:textColor="@color/color_white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@android:color/transparent"
        android:onClick="closeWindows"
        android:src="@mipmap/ic_chevron_left_white_48dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@mipmap/ic_high_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/about_title"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/about_explain" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/about_email"
                    android:onClick="contacting"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/about_email_url"
                    android:onClick="contacting"
                    android:textStyle="italic" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginRight="5dp"
                android:text="@string/about_rights"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
