<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context="com.surfacesoft.yaj.satransferui.HelpTransfer">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/color_blue"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/help_title"
        android:textColor="@color/color_white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@android:color/transparent"
        android:onClick="closeWindows"
        android:src="@mipmap/ic_chevron_left_white_48dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@mipmap/ic_contact_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/help_transfer_contact_button"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/help_transfer_contact_button_desc" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/color_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/help_transfer_contact_name"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/help_transfer_contact_name_desc" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/color_black" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:text="5#######"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:background="@color/color_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/help_transfer_contact_phone_desc" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/color_black" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/help_transfer_monto"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:background="@color/color_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_transfer_monto_desc" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
