<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue"
    tools:context="com.surfacesoft.yaj.satransferui.ShowClave">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/color_blue"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/txtNombreApp"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="55dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txtSubtitleConfigureClave"
                    android:textColor="@color/color_white"
                    android:textSize="15sp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/txtExplainConfigureClave"
                    android:textColor="@color/color_white"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@mipmap/ic_logo_configure" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/txtNoteConfigureClave"
                    android:textColor="@color/color_white"
                    android:textSize="16dp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/txtNoteTextConfigureClave"
                    android:textColor="@color/color_white"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/txtClaveConfigure"
                    android:textColor="@color/color_white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etClaveConfigure"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/color_white"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="5dp"
                    android:password="true" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tvNombreApp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/line" />

    <Button
        android:id="@+id/btnNextShow"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:onClick="nextSlide"
        android:text="@string/btnEndShow"
        android:textColor="@color/color_white"
        android:textSize="18dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:onClick="nextSlide"
        android:src="@mipmap/ic_navigate_next_white_48dp" />
</RelativeLayout>