<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue"
    tools:context="com.surfacesoft.yaj.satransferui.Locker">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fgc1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/ic_locker" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/txtLockerClave"
            android:textColor="@color/color_white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etLockerClave"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/color_white"
            android:inputType="number"
            android:maxLength="4"
            android:padding="5dp"
            android:password="true" />

        <Button
            android:id="@+id/btnLockerClave"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/button_rounded_green"
            android:onClick="unlockApp"
            android:text="@string/btnLockerClave"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tvNombreApp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/line" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:onClick="closeWindows"
        android:text="@string/btnClose"
        android:textColor="@color/color_white"
        android:textSize="18dp" />
</RelativeLayout>